        PR 10168         * config/tc-arm.c (do_t_pkhtb): Swap Rm and Rn when encoding as         PKHBT.         * gas/arm/thumb32.d: Fix expected disassembly of PKHTB insn.